<resources>
    <string name="app_name">TechNpro</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">sign in</string>
    <string name="prompt_password">Enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="learn1">Java - Python</string>
    <string name="topics">To see all the topics in Java - Python..</string>
    <string name="clickhere">Click Here</string>
    <string name="technpro">Tech-N-Pro</string>
    <string name="topics1">Topics</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="reset">Reset</string>
    <string name="search1">To search some important and favourite topics..</string>
    <string name="search2">Search Here</string>
    <string name="search3">Search your wanted topic..</string>
    <string name="feedback1">Feedback</string>
    <string name="feedback2">Please give us a feedback to improve this tutorial application..</string>
    <string name="feedback3">Give Feedback</string>
    <string name="rating1">Ratings</string>
    <string name="rating2">Rate this application and it will make us to improve much more..</string>
    <string name="rating3">Rate here</string>
    <string name="rating4">Rated Stars: </string>
    <string name="rate">Rate the app</string>
    <string name="profile1">Profile</string>
    <string name="profile2">Edit your profile and store your details to us..</string>
    <string name="profile3">Edit Profile</string>
    <string name="learn10">Learn</string>
    <string name="search10">Search</string>
    <string name="logout10">Logout</string>
    <string name="rating10">Rating</string>
    <string name="profile10">Profile</string>
    <string name="feedback10">Feedback</string>
    <string name="logout1">Logout</string>
    <string name="logout2">Confirm you want to signout from here..</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="jp">Java - Python</string>
    <string name="learn3">Compare and learn Java - Python at a time..</string>
    <string name="chatbot1">Chatbot</string>
    <string name="chatbot2">Click for open discussion box to share your knowledge. Avoid unwanted talks in it.</string>
    <string name="chatbot3">Chat Here</string>

    <string name="name">Name</string>
    <string name="name1">Write a feedback..</string>
    <string name="submit">Send Feedback</string>
    <string name="submit1">Submit</string>
    <string name="address">College Name</string>
    <string name="date">MM-DD-YYYY</string>
    <string name="submit2"><![CDATA[Edit & Save]]></string>
    <string name="degree">Degree / Dept / Year</string>
    <string name="pre"><![CDATA[ << Previous ]]></string>
    <string name="nxt"><![CDATA[ Next >> ]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">TechQprO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Edit Profile</string>

    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="learn">Learn</string>
    <string name="profile">Profile</string>
    <string name="rating">Ratings</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="editprofile">EditProfile</string>
    <string name="title_activity_search">Search</string>

    <string name="bs">Basic Syntax</string>
    <string name="co">Objects and Class</string>
    <string name="dt">Data Types</string>
    <string name="vt">Variable Types</string>
    <string name="bo">Basic Operators</string>
    <string name="lc">Loop Controls</string>
    <string name="dm">Decision Making</string>
    <string name="num">Numbers</string>
    <string name="st">Strings</string>
    <string name="arr">Arrays and Lists</string>
    <string name="dnt">Date and Time</string>
    <string name="reg">Regular Expression</string>
    <string name="methods">Methods</string>
    <string name="files">Files and IO</string>
    <string name="exc">Exception Handling</string>
    <string name="in">Inheritance</string>
    <string name="over">Overriding</string>
    <string name="poly">Polymorphism</string>
    <string name="encap">Encapsulation</string>
    <string name="inter">Interfaces</string>
    <string name="pack">Packages</string>
    <string name="ds">Data Structures</string>
    <string name="cl">Collections</string>
    <string name="gen">Generics</string>
    <string name="ss">Serialization</string>
    <string name="net">Networking</string>
    <string name="em">Concept of sending Emails</string>
    <string name="multi">Multithreading</string>
    <string name="ab">Applet Basics</string>
    <string name="doc">Documentations</string>
    <string name="cgi">CGI Programming</string>
    <string name="db">Database Access</string>
    <string name="xmlp">XML Processing</string>
    <string name="title_activity_main_main">MainMain</string>


    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>

</resources>
