<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    tools:context="com.wolfpack.ajaysharvesh.techqpro1.RegistrationActivity.MainActivity">

    <EditText
        android:id="@+id/old_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:background="@drawable/bottom_style"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/ic_action_mail"
        android:textColor="#fff"
        android:textColorHint="#fff"
        tools:layout_editor_absoluteY="82dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:background="@drawable/bottom_style"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_password"
        android:drawableLeft="@drawable/ic_action_pass"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp"
        android:layout_above="@+id/newPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:background="@drawable/bottom_style"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_action_pass"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_marginBottom="16dp"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp"
        android:layout_above="@+id/changePass"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="211dp"
        tools:layout_editor_absoluteX="199dp"
        android:layout_above="@+id/change_password_button"
        android:layout_alignLeft="@+id/newPassword"
        android:layout_alignStart="@+id/newPassword"
        android:layout_marginBottom="15dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="259dp"
        tools:layout_editor_absoluteX="199dp"
        android:layout_alignBaseline="@+id/changePass"
        android:layout_alignBottom="@+id/changePass"
        android:layout_alignRight="@+id/newPassword"
        android:layout_alignEnd="@+id/newPassword" />

    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:background="@drawable/button_style"
        android:textColor="#FFF"
        android:layout_marginBottom="12dp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="312dp"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignLeft="@+id/remove_user_button"
        android:layout_alignStart="@+id/remove_user_button" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp"
        android:layout_above="@+id/buy_now"
        android:background="@drawable/button_style"
        android:textColor="#FFF"
        android:layout_alignLeft="@+id/buy_now"
        android:layout_alignStart="@+id/buy_now" />

    <Button
        android:id="@+id/buy_now"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/learn1"
        android:textStyle="bold"
        android:background="@drawable/button_style"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/sign_out"
        android:layout_alignLeft="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#11000000"
        android:layout_marginBottom="22dp"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="456dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold|italic" />


</RelativeLayout>
