<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wolfpackalpha.ajaysharvesh.techqpro1.Lists.LoopControls">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lc"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="0dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/java"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:padding="4dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold|italic"/>

    <ImageView
        android:id="@+id/lc1"
        android:layout_width="match_parent"
        android:layout_height="450dp" />
        <ImageView
        android:id="@+id/lc2"
        android:layout_width="match_parent"
        android:layout_height="450dp" />
        <ImageView
        android:id="@+id/lc3"
        android:layout_width="match_parent"
        android:layout_height="450dp" />
        <ImageView
        android:id="@+id/lc4"
        android:layout_width="match_parent"
        android:layout_height="280dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/python"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:padding="10dp"/>

        <ImageView
        android:id="@+id/lc5"
        android:layout_width="match_parent"
        android:layout_height="450dp" />
        <ImageView
        android:id="@+id/lc6"
        android:layout_width="match_parent"
        android:layout_height="450dp" />
        <ImageView
            android:id="@+id/lc7"
            android:layout_width="match_parent"
            android:layout_height="190dp" />
        <Button
            android:id="@+id/btn_nxt6"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/nxt"
            android:layout_gravity="center"
            android:layout_below="@+id/subhead"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:layout_marginBottom="5dp"
            android:id="@+id/btn_pre6"
            android:layout_width="400dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_style"
            android:text="@string/pre"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
