<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    android:orientation="vertical"
    tools:context="com.wolfpackalpha.ajaysharvesh.techqpro1.ProfileActivity.ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ourlogo" />

    <TextView
        android:id="@+id/sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/profile1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <!-- <EditText
        android:id="@+id/sendto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        android:background="@drawable/bottom_style1"
        android:textColorHint="@color/white"
        android:drawableLeft="@drawable/ic_action_mail"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_margin="10dp"/> -->

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:drawableLeft="@drawable/ic_action_firstname"
        android:background="@drawable/bottom_style1"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/mailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_action_mail"
            android:background="@drawable/bottom_style1"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            android:drawableLeft="@drawable/date1"
            android:background="@drawable/bottom_style1"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/degree"
            android:inputType="textCapCharacters"
            android:drawableLeft="@drawable/degree"
            android:background="@drawable/bottom_style1"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_margin="10dp"/>

        <MultiAutoCompleteTextView
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
            android:inputType="textCapCharacters"
        android:drawableLeft="@drawable/college"
        android:background="@drawable/bottom_style1"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="390dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/submit2"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>
